# finance-ai

./: .env.example  .gitignore  alembic.ini  makefile  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 03ef697ac9d2_initial_schema.py  10b107c6846d_add_unique_index_to_users_email.py  2043da5cd525_init_schema.py  7c3e8caa1d1e_drop_account_institution.py  82f071be41f1_categories_budgets_routers.py  a42c9a04be6a_add_indexes_and_aggregations.py  bc9b1393146e_indexes_improvements.py  f3db4c6104b5_money_types_to_decimal.py
finance_ai/: app.py
finance_ai/core/: config.py  security.py  settings.py
finance_ai/db/: base.py  models.py  session.py
finance_ai/routers/: accounts.py  aggregations.py  auth.py  budget_compare.py  budgets.py  categories.py  health.py  transactions.py
finance_ai/schemas/: transactions.py
finance_ai/services/: csv_import.py
